# python-growth-projects

./: .gitignore  README.md
data_transformer/: pyproject.toml  test.csv
data_transformer/data_transformer/: cli.py  utils.py
data_transformer/tests/csv/: multi.csv  single.csv
data_transformer/tests/json/: multi.json  single.json
djangobookmanagement/: manage.py
djangobookmanagement/bookmankeeps/: asgi.py  settings.py  urls.py  wsgi.py
